Update Taxi - Reinforcement Learning.ipynb

--- a/Taxi - Reinforcement Learning.ipynb
+++ b/Taxi - Reinforcement Learning.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,11 +88,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[34;1mR\u001b[0m: | : :G|\n",
+      "|R: | : :\u001b[34;1mG\u001b[0m|\n",
       "| : : : : |\n",
       "| : : : : |\n",
-      "| | : | : |\n",
-      "|Y| : |\u001b[35m\u001b[43mB\u001b[0m\u001b[0m: |\n",
+      "| | : |\u001b[43m \u001b[0m: |\n",
+      "|\u001b[35mY\u001b[0m| : |B: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3124,13 +3126,327 @@
        "  5: [(1.0, 499, -10, False)]}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "env.P"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Movement -> -1, Pickup/DropOff -> -10, Done -> 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qTable = numpy.zeros([env.observation_space.n, env.action_space.n])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Q Table is of 500x6 dimension: 6 action spaces for every 500 states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Episode done\n",
+      "50 Episode done\n",
+      "100 Episode done\n",
+      "150 Episode done\n",
+      "200 Episode done\n",
+      "250 Episode done\n",
+      "300 Episode done\n",
+      "350 Episode done\n",
+      "400 Episode done\n",
+      "450 Episode done\n",
+      "500 Episode done\n",
+      "550 Episode done\n",
+      "600 Episode done\n",
+      "650 Episode done\n",
+      "700 Episode done\n",
+      "750 Episode done\n",
+      "800 Episode done\n",
+      "850 Episode done\n",
+      "900 Episode done\n",
+      "950 Episode done\n",
+      "1000 Episode done\n",
+      "1050 Episode done\n",
+      "1100 Episode done\n",
+      "1150 Episode done\n",
+      "1200 Episode done\n",
+      "1250 Episode done\n",
+      "1300 Episode done\n",
+      "1350 Episode done\n",
+      "1400 Episode done\n",
+      "1450 Episode done\n",
+      "1500 Episode done\n",
+      "1550 Episode done\n",
+      "1600 Episode done\n",
+      "1650 Episode done\n",
+      "1700 Episode done\n",
+      "1750 Episode done\n",
+      "1800 Episode done\n",
+      "1850 Episode done\n",
+      "1900 Episode done\n",
+      "1950 Episode done\n",
+      "2000 Episode done\n",
+      "2050 Episode done\n",
+      "2100 Episode done\n",
+      "2150 Episode done\n",
+      "2200 Episode done\n",
+      "2250 Episode done\n",
+      "2300 Episode done\n",
+      "2350 Episode done\n",
+      "2400 Episode done\n",
+      "2450 Episode done\n",
+      "2500 Episode done\n",
+      "2550 Episode done\n",
+      "2600 Episode done\n",
+      "2650 Episode done\n",
+      "2700 Episode done\n",
+      "2750 Episode done\n",
+      "2800 Episode done\n",
+      "2850 Episode done\n",
+      "2900 Episode done\n",
+      "2950 Episode done\n",
+      "3000 Episode done\n",
+      "3050 Episode done\n",
+      "3100 Episode done\n",
+      "3150 Episode done\n",
+      "3200 Episode done\n",
+      "3250 Episode done\n",
+      "3300 Episode done\n",
+      "3350 Episode done\n",
+      "3400 Episode done\n",
+      "3450 Episode done\n",
+      "3500 Episode done\n",
+      "3550 Episode done\n",
+      "3600 Episode done\n",
+      "3650 Episode done\n",
+      "3700 Episode done\n",
+      "3750 Episode done\n",
+      "3800 Episode done\n",
+      "3850 Episode done\n",
+      "3900 Episode done\n",
+      "3950 Episode done\n",
+      "4000 Episode done\n",
+      "4050 Episode done\n",
+      "4100 Episode done\n",
+      "4150 Episode done\n",
+      "4200 Episode done\n",
+      "4250 Episode done\n",
+      "4300 Episode done\n",
+      "4350 Episode done\n",
+      "4400 Episode done\n",
+      "4450 Episode done\n",
+      "4500 Episode done\n",
+      "4550 Episode done\n",
+      "4600 Episode done\n",
+      "4650 Episode done\n",
+      "4700 Episode done\n",
+      "4750 Episode done\n",
+      "4800 Episode done\n",
+      "4850 Episode done\n",
+      "4900 Episode done\n",
+      "4950 Episode done\n",
+      "5000 Episode done\n",
+      "5050 Episode done\n",
+      "5100 Episode done\n",
+      "5150 Episode done\n",
+      "5200 Episode done\n",
+      "5250 Episode done\n",
+      "5300 Episode done\n",
+      "5350 Episode done\n",
+      "5400 Episode done\n",
+      "5450 Episode done\n",
+      "5500 Episode done\n",
+      "5550 Episode done\n",
+      "5600 Episode done\n",
+      "5650 Episode done\n",
+      "5700 Episode done\n",
+      "5750 Episode done\n",
+      "5800 Episode done\n",
+      "5850 Episode done\n",
+      "5900 Episode done\n",
+      "5950 Episode done\n",
+      "6000 Episode done\n",
+      "6050 Episode done\n",
+      "6100 Episode done\n",
+      "6150 Episode done\n",
+      "6200 Episode done\n",
+      "6250 Episode done\n",
+      "6300 Episode done\n",
+      "6350 Episode done\n",
+      "6400 Episode done\n",
+      "6450 Episode done\n",
+      "6500 Episode done\n",
+      "6550 Episode done\n",
+      "6600 Episode done\n",
+      "6650 Episode done\n",
+      "6700 Episode done\n",
+      "6750 Episode done\n",
+      "6800 Episode done\n",
+      "6850 Episode done\n",
+      "6900 Episode done\n",
+      "6950 Episode done\n",
+      "7000 Episode done\n",
+      "7050 Episode done\n",
+      "7100 Episode done\n",
+      "7150 Episode done\n",
+      "7200 Episode done\n",
+      "7250 Episode done\n",
+      "7300 Episode done\n",
+      "7350 Episode done\n",
+      "7400 Episode done\n",
+      "7450 Episode done\n",
+      "7500 Episode done\n",
+      "7550 Episode done\n",
+      "7600 Episode done\n",
+      "7650 Episode done\n",
+      "7700 Episode done\n",
+      "7750 Episode done\n",
+      "7800 Episode done\n",
+      "7850 Episode done\n",
+      "7900 Episode done\n",
+      "7950 Episode done\n",
+      "8000 Episode done\n",
+      "8050 Episode done\n",
+      "8100 Episode done\n",
+      "8150 Episode done\n",
+      "8200 Episode done\n",
+      "8250 Episode done\n",
+      "8300 Episode done\n",
+      "8350 Episode done\n",
+      "8400 Episode done\n",
+      "8450 Episode done\n",
+      "8500 Episode done\n",
+      "8550 Episode done\n",
+      "8600 Episode done\n",
+      "8650 Episode done\n",
+      "8700 Episode done\n",
+      "8750 Episode done\n",
+      "8800 Episode done\n",
+      "8850 Episode done\n",
+      "8900 Episode done\n",
+      "8950 Episode done\n",
+      "9000 Episode done\n",
+      "9050 Episode done\n",
+      "9100 Episode done\n",
+      "9150 Episode done\n",
+      "9200 Episode done\n",
+      "9250 Episode done\n",
+      "9300 Episode done\n",
+      "9350 Episode done\n",
+      "9400 Episode done\n",
+      "9450 Episode done\n",
+      "9500 Episode done\n",
+      "9550 Episode done\n",
+      "9600 Episode done\n",
+      "9650 Episode done\n",
+      "9700 Episode done\n",
+      "9750 Episode done\n",
+      "9800 Episode done\n",
+      "9850 Episode done\n",
+      "9900 Episode done\n",
+      "9950 Episode done\n",
+      "Training Finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "alpha = 0.1\n",
+    "discount_factor = 0.7\n",
+    "epsilon = 0.1\n",
+    "\n",
+    "episodes = 10000\n",
+    "\n",
+    "done = False\n",
+    "\n",
+    "for i in range(episodes):\n",
+    "    state = env.reset()\n",
+    "    steps, reward = 0,0\n",
+    "    penalties = 0\n",
+    "    while not done:\n",
+    "        if(random.uniform(0,1) < epsilon):\n",
+    "            action = env.action_space.sample()\n",
+    "        else:\n",
+    "            action = numpy.argmax(qTable[state])\n",
+    "\n",
+    "        next_s, reward, done, info = env.step(action)\n",
+    "\n",
+    "        old_value = qTable[state, action]\n",
+    "        best_next = numpy.argmax(qTable[state])\n",
+    "        \n",
+    "        new_value = (1-alpha) * old_value + alpha * (reward + discount_factor * best_next)\n",
+    "        \n",
+    "        qTable[state, action] = new_value\n",
+    "        \n",
+    "        if reward == -10: \n",
+    "            penalties += 1\n",
+    "            \n",
+    "        state = next_s\n",
+    "        steps += 1\n",
+    "        \n",
+    "    if(i%50 == 0):\n",
+    "        print(\"{} Episode done\".format(i))\n",
+    "        \n",
+    "print(\"Training Finished\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see what some state looks like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qTable[1]"
    ]
   },
   {
